fixed no keyboard on mobile.

--- a/public/style.css
+++ b/public/style.css
@@ -21,3 +21,11 @@ canvas {
     max-width: 100%;
     max-height: 100%;
 }
+
+.hidden-input {
+    position: absolute;
+    left: -9999px;
+    top: -9999px;
+    opacity: 0;
+    pointer-events: none;
+}
